--- a/.github/workflows/amd64.yml
+++ b/.github/workflows/amd64.yml
@@ -22,6 +22,7 @@ jobs:
 
     - name: Pull Docker Images and Package
       run: |
+        pwd
         images="${{ github.event.inputs.docker_images }}"
         IFS=',' read -r -a image_array <<< "$images"
         for image in "${image_array[@]}"; do
@@ -30,7 +31,9 @@ jobs:
         done
 
     - name: Compress the TAR files
-      run: tar -czf x86-64-images.tar.gz *-amd64.tar
+      run: |
+        pwd
+        tar -czf x86-64-images.tar.gz *-amd64.tar
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
