--- a/.github/workflows/amd64.yml
+++ b/.github/workflows/amd64.yml
@@ -24,7 +24,7 @@ jobs:
       run: |
         pwd
         df -h
-        rm -rf /var/lib/docker/tmp/*
+        sudo rm -rf /var/lib/docker/tmp/*
         docker info
         images="${{ github.event.inputs.docker_images }}"
         IFS=',' read -r -a image_array <<< "$images"
