--- a/.github/workflows/amd64.yml
+++ b/.github/workflows/amd64.yml
@@ -22,6 +22,7 @@ jobs:
 
     - name: Pull Docker Images and Package
       run: |
+        systemctl restart docker
         pwd
         df -h
         sudo rm -rf /var/lib/docker/tmp/*
