--- a/.github/workflows/amd64.yml
+++ b/.github/workflows/amd64.yml
@@ -22,10 +22,10 @@ jobs:
 
     - name: Pull Docker Images and Package
       run: |
-        systemctl restart docker
+        # systemctl restart docker
         pwd
         df -h
-        sudo rm -rf /var/lib/docker/tmp/*
+        # sudo rm -rf /var/lib/docker/tmp/*
         docker info
         images="${{ github.event.inputs.docker_images }}"
         IFS=',' read -r -a image_array <<< "$images"
