--- a/.github/workflows/amd64.yml
+++ b/.github/workflows/amd64.yml
@@ -22,7 +22,8 @@ jobs:
 
     - name: Pull Docker Images and Package
       run: |
-        # systemctl restart docker
+        docker system prune --all --force --volumes
+        systemctl restart docker
         pwd
         df -h
         # df -hl /home/runner/work/DockerTarBuilder/DockerTarBuilder
