--- a/.github/workflows/amd64.yml
+++ b/.github/workflows/amd64.yml
@@ -26,6 +26,7 @@ jobs:
         # systemctl restart docker
         pwd
         df -h
+        # df -hl /var/lib/docker
         # df -hl /home/runner/work/DockerTarBuilder/DockerTarBuilder
         # sudo rm -rf /var/lib/docker/tmp/*
         docker info
