--- a/.github/workflows/amd64.yml
+++ b/.github/workflows/amd64.yml
@@ -26,7 +26,7 @@ jobs:
         # systemctl restart docker
         pwd
         df -h
-        du -ah ./ --max-deepth=1
+        du -ah --max-deepth=1
         du -ah /var/lib/docker --max-deepth=1
         # df -hl /var/lib/docker
         # df -hl /home/runner/work/DockerTarBuilder/DockerTarBuilder
