--- a/.github/workflows/amd64.yml
+++ b/.github/workflows/amd64.yml
@@ -26,6 +26,7 @@ jobs:
         # systemctl restart docker
         pwd
         df -h
+        sudo du -ah / --max-depth=1
         sudo du -ah ./ --max-depth=1
         sudo du -ah /var/lib/docker --max-depth=1
         # df -hl /var/lib/docker
