--- a/.github/workflows/amd64.yml
+++ b/.github/workflows/amd64.yml
@@ -33,6 +33,7 @@ jobs:
         # df -hl /home/runner/work/DockerTarBuilder/DockerTarBuilder
         # sudo rm -rf /var/lib/docker/tmp/*
         docker info
+        docker volume ls
         images="${{ github.event.inputs.docker_images }}"
         IFS=',' read -r -a image_array <<< "$images"
         for image in "${image_array[@]}"; do
