--- a/.github/workflows/amd64.yml
+++ b/.github/workflows/amd64.yml
@@ -37,8 +37,8 @@ jobs:
         images="${{ github.event.inputs.docker_images }}"
         IFS=',' read -r -a image_array <<< "$images"
         for image in "${image_array[@]}"; do
-          docker pull "${image}" --platform "linux/amd64"
-          # docker save "${image}" -o "${image//\//_}-amd64.tar"
+          # docker pull "${image}" --platform "linux/amd64"
+          docker save "${image}" -o "${image//\//_}-amd64.tar"
         done
 
     - name: Compress the TAR files
