--- a/.github/workflows/amd64.yml
+++ b/.github/workflows/amd64.yml
@@ -34,11 +34,12 @@ jobs:
         # sudo rm -rf /var/lib/docker/tmp/*
         docker info
         docker volume ls
-        images="${{ github.event.inputs.docker_images }}"
-        IFS=',' read -r -a image_array <<< "$images"
-        for image in "${image_array[@]}"; do
+        docker images -a
+        # images="${{ github.event.inputs.docker_images }}"
+        # IFS=',' read -r -a image_array <<< "$images"
+        # for image in "${image_array[@]}"; do
           # docker pull "${image}" --platform "linux/amd64"
-          docker save "${image}" -o "${image//\//_}-amd64.tar"
+          # docker save "${image}" -o "${image//\//_}-amd64.tar"
         done
 
     - name: Compress the TAR files
