--- a/.github/workflows/amd64.yml
+++ b/.github/workflows/amd64.yml
@@ -26,15 +26,17 @@ jobs:
         # systemctl restart docker
         pwd
         df -h
+        cd /
+        sudo du -h | grep G
         # sudo du -ah / --max-depth=1
-        sudo du -ah ./ --max-depth=1
-        sudo du -ah /var/lib/docker --max-depth=1
+        # sudo du -ah ./ --max-depth=1
+        # sudo du -ah /var/lib/docker --max-depth=1
         # df -hl /var/lib/docker
         # df -hl /home/runner/work/DockerTarBuilder/DockerTarBuilder
         # sudo rm -rf /var/lib/docker/tmp/*
-        docker info
-        docker volume ls
-        docker images -a
+        # docker info
+        # docker volume ls
+        # docker images -a
         # images="${{ github.event.inputs.docker_images }}"
         # IFS=',' read -r -a image_array <<< "$images"
         # for image in "${image_array[@]}"; do
